--- a/svc.yaml
+++ b/svc.yaml
@@ -1,10 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: guestbook-ui
-spec:
+  name: tomcat
   ports:
   - port: 80
     targetPort: 80
   selector:
-    app: guestbook-ui
+    app: tomcat
