--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: tomcat
     spec:
       containers:
-      - image: summu97/img:replaceImageTag
+      - image: summu97/img:13
         name: tomcat
         ports:
         - containerPort: 80
