--- a/deployment.yaml
+++ b/deployment.yaml
@@ -3,8 +3,7 @@ kind: Deployment
 metadata:
   name: tomcat
 spec:
-  replicas: 1
-  revisionHistoryLimit: 3
+  replicas: 3
   selector:
     matchLabels:
       app: tomcat
@@ -14,7 +13,7 @@ spec:
         app: tomcat
     spec:
       containers:
-      - image: summu97/img:replaceImageTag
+      - image: summu97/img:1
         name: tomcat
         ports:
         - containerPort: 80
