--- a/svc.yaml
+++ b/svc.yaml
@@ -2,8 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: tomcat
-  ports:
-  - port: 80
-    targetPort: 80
+spec:
+  type: LoadBalancer
   selector:
     app: tomcat
+  ports:
+    - port: 80
+      targetPort: 80
