--- a/argo-files/deployment.yaml
+++ b/argo-files/deployment.yaml
@@ -17,3 +17,15 @@ spec:
         name: tomcat
         ports:
         - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: tomcat
+spec:
+  type: LoadBalancer
+  selector:
+    app: tomcat
+  ports:
+    - port: 80
+      targetPort: 80
